syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/greghart/climbing-app/internal/pb";

message Timestamps {
  google.protobuf.Timestamp created_at = 1;
  google.protobuf.Timestamp updated_at = 2;
}
