syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/greghart/climbing-app/internal/pb";

message Upload {
  int64 id = 1;
  string key = 2;
  string directory = 3;
  string engine = 4;
  string original_name = 5;
  int64 file_size = 6;
  string sha1_hash = 7;
  google.protobuf.Timestamp uploaded_at = 8;
}
